--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
                     <div>
                         <div id="infos" style="color: #0065FC; margin-right: 1em;"><i class="fas fa-info"></i></div>
                     </div>
-                    <div>
+                    <div id="first-bloc-last-part-text">
                         Plus de 500 logements sont disponbiles dans cette ville
                     </div>
                 </div>
-
             </div>
             <div id="body-hosting" class="df">
                 <section id="body-hosting-marseille" class="bloc-marseille">
