--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <script src="https://kit.fontawesome.com/9405848609.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="header" class="df">
+        <header id="header" class="df">
             <div>
                 <img src="Ressources/logo/Reservia.svg" alt="logo reservia" />
             </div>
@@ -20,7 +20,7 @@
                 <a href="#body-activity">Activités</a>
                 <a href="#"><span id="register">S'inscrire</span></a>
             </nav>
-        </div>
+        </header>
         <div id="header-mobile" class="df">
             <div class="df jc-sa ai-c">
                 <img src="Ressources/logo/Reservia.svg" alt="logo reservia" />
@@ -45,7 +45,7 @@
                     <div class="df"><div id="logo-gps"><span><i id="logo-gps-pos" class="fas fa-map-marker-alt"></i></span></div></div>
                     <input type="search" name="search" id="search" value="Marseille, France" />
                     <div id="body-search-btn-mobile">
-                        <span style="color: #FFFFFF;">
+                        <span class="FFFFFF">
                             <i class="fas fa-search"></i>
                         </span>
                     </div>
@@ -56,31 +56,31 @@
                     <div class="df">
                         <div class="filter df ai-c" >
                             <div class="filter-logo-circle">
-                                <span style="color: #0065FC;"><i class="fas fa-money-bill-wave"></i></span>
+                                <span class="blue"><i class="fas fa-money-bill-wave"></i></span>
                             </div>
                             <span class="filter-text">Economique</span>
                         </div> 
                         <div class="filter df ai-c" >
                             <div class="filter-logo-circle">
-                                <span style="color: #0065FC;"><i class="fas fa-child"></i></span>
+                                <span class="blue"><i class="fas fa-child"></i></span>
                             </div>
                             <span class="filter-text">Familial</span>
                         </div> 
                     </div>
                     <div id="filter-solo-one" class="filter df ai-c" >
                         <div class="filter-logo-circle">
-                            <span style="color: #0065FC;"><i class="fas fa-heart"></i></span>
+                            <span class="blue"><i class="fas fa-heart"></i></span>
                         </div>
                         <span class="filter-text">Romantique</span>
                     </div>
                     <div id="filter-solo-two" class="filter df ai-c" >
-                            <span class="filter-logo-circle" style="color: #0065FC;"><i class="fas fa-dog"></i></span>
+                            <span class="filter-logo-circle blue"><i class="fas fa-dog"></i></span>
                         <span class="filter-text">Animaux autorisés</span>
                     </div> 
                 </div> 
                 <div id="first-bloc-last-part" class="df fd-r">
                     <div>
-                        <div id="infos" style="color: #0065FC; margin-right: 1em;"><i class="fas fa-info"></i></div>
+                        <div id="infos" class="blue i-logo"><i class="fas fa-info"></i></div>
                     </div>
                     <div id="first-bloc-last-part-text">
                         Plus de 500 logements sont disponbiles dans cette ville
@@ -99,7 +99,7 @@
                                         <div class="hosting-thumbnail-text df fd-c jc-sb">
                                             <div class="hosting-thumbnail-details bold">Auberge de la Cannebière</div>
                                             <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 25€</div>
-                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fa fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i></span></div>
+                                            <div class="hosting-thumbnail-details blue"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fa fa-star"></i><span class="afb8c7"><i class="fas fa-star"></i></span></div>
                                         </div>
                                     </div>
                                 </a>
@@ -111,7 +111,7 @@
                                         <div class="hosting-thumbnail-text">
                                             <div class="hosting-thumbnail-details bold">Hôtel du port</div>
                                             <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 52€</div>
-                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                                            <div class="hosting-thumbnail-details blue"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                                         </div>
                                     </div>
                                 </a>
@@ -123,7 +123,7 @@
                                         <div class="hosting-thumbnail-text">
                                             <div class="hosting-thumbnail-details bold">Hôtel Les mouettes</div>
                                             <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 76€</div>
-                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i></span></div>
+                                            <div class="hosting-thumbnail-details blue"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span class="afb8c7"><i class="fas fa-star"></i></span></div>
                                         </div>
                                     </div>
                                 </a>
@@ -137,7 +137,7 @@
                                         <div class="hosting-thumbnail-text">
                                             <div class="hosting-thumbnail-details bold">Hôtel de la mer</div>
                                             <div class="hosting-thumbnail-details thin fs-small"> Nuit à partir de 46€</div>
-                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i><i class="fas fa-star"></i></span></div>
+                                            <div class="hosting-thumbnail-details blue"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span class="afb8c7"><i class="fas fa-star"></i><i class="fas fa-star"></i></span></div>
                                         </div>
                                     </div>                               
                                 </a>
@@ -149,7 +149,7 @@
                                         <div class="hosting-thumbnail-text">
                                             <div class="hosting-thumbnail-details bold">Auberge Le Panier</div>
                                             <div class="hosting-thumbnail-details thin fs-small"> Nuit à partir de 23€</div>
-                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i></span></div>
+                                            <div class="hosting-thumbnail-details blue"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span class="afb8c7"><i class="fas fa-star"></i></span></div>
                                         </div>
                                     </div>
                                 </a>
@@ -161,7 +161,7 @@
                                         <div class="hosting-thumbnail-text">
                                             <div class="hosting-thumbnail-details bold">Hôtel chez Amina</div>
                                             <div class="hosting-thumbnail-details thin fs-small"> Nuit à partir de 96€</div>
-                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                                            <div class="hosting-thumbnail-details blue"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                                         </div>                                       
                                     </div>                                             
                                 </a>
@@ -185,7 +185,7 @@
                                     <div class="popular-thumbnail-text">
                                         <div class="hosting-thumbnail-details bold">Hôtel Le soleil du<br/> matin</div>
                                         <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 128€</div>
-                                        <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                                        <div class="hosting-thumbnail-details blue"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                                     </div>
                                 </div>
                             </a>
@@ -197,7 +197,7 @@
                                     <div class="popular-thumbnail-text">
                                         <div class="hosting-thumbnail-details bold">Au coeur de l'eau Chambres d'hôtes</div>
                                         <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 71€</div>
-                                        <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i></span></div>
+                                        <div class="hosting-thumbnail-details blue"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span class="afb8c7"><i class="fas fa-star"></i></span></div>
                                     </div>
                                 </div>
                             </a>
@@ -209,7 +209,7 @@
                                     <div class="popular-thumbnail-text">
                                         <div class="hosting-thumbnail-details bold">Hôtel Tout bleu et<br/> Blanc</div>
                                         <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 68€</div>
-                                        <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i></span></div>
+                                        <div class="hosting-thumbnail-details blue"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span class="afb8c7"><i class="fas fa-star"></i></span></div>
                                     </div>
                                 </div>
                             </a> 
@@ -220,7 +220,6 @@
             <div id="body-activity">
                 <h1 id="activities-title">Activités à Marseille</h1>
                 <div id="activity-activities" class="df">
-
                     <div  class="activities">
                         <a target="_blank" href="Ressources/activites/vieux-port.jpg">
                         <div class="activities-thumbnail-big">
@@ -278,7 +277,7 @@
                 </div>
             </div>
         </div>
-        <div id="footer" class="bloc">
+        <footer id="footer" class="bloc">
             <div>
                 <span class="bold footer-title">A propos</span>
                 <ul>
@@ -301,7 +300,7 @@
                     <li><a>Nous contacter</a></li>
                 </ul>          
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 </html>
