--- a/index.html
+++ b/index.html
@@ -11,30 +11,26 @@
 </head>
 <body>
     <div class="container">
-        <header id="header" class="df">
-            <div>
-                <img src="Ressources/logo/Reservia.svg" alt="logo reservia" />
-            </div>
-            <nav id="menu" class="df jc-sa">
-                <a href="#body-hosting">Hégergements</a>
-                <a href="#body-activity">Activités</a>
-                <a href="#"><span id="register">S'inscrire</span></a>
-            </nav>
-        </header>
-        <div id="header-mobile" class="df">
-            <div class="df jc-sa ai-c">
-                <img src="Ressources/logo/Reservia.svg" alt="logo reservia" />
-                <div id="register-parent"><a href="#"><span id="register-mobile">S'inscrire</span></a></div>
-            </div>
-            <nav id="menu-mobile" class="df jc-se">
-                <div class="menu-mobile-items">
-                    <a href="#body-hosting">Hégergements</a>
+
+        <header>
+            <div id="header">
+                <div class="menu-one">
+                    <div class="menu-logo">
+                        <img src="Ressources/logo/Reservia.svg" alt="logo reservia" /> 
+                    </div>
+    
+                    <div id="register-one">
+                        <a href="#"><span>S'inscrire</span></a>
+                    </div>
                 </div>
-                <div class="menu-mobile-items">
+                <nav id="menu">
+                    <a href="#body-hosting">Hégergements</a>
                     <a href="#body-activity">Activités</a>
-                </div>                
-            </nav>
-        </div>
+                    <a href="#"><span id="register-two">S'inscrire</span></a>
+                </nav>
+            </div>
+        </header>
+       
         <div id="body">
             <div id="first-bloc">
                     <div id="first-bloc-text">
