desk & pad header ok

--- a/index.html
+++ b/index.html
@@ -12,22 +12,38 @@
 <body>
     <div class="container">
         <header>
+
+<!--
             <div id="header">
                 <div class="menu-one">
                     <div class="menu-logo">
                         <img src="Ressources/logo/Reservia.svg" alt="logo reservia" /> 
                     </div>
-    
-                    <div id="register-one">
+                    <div id="register">
                         <a href="#"><span>S'inscrire</span></a>
                     </div>
                 </div>
                 <nav id="menu">
                     <a href="#body-hosting">Hégergements</a>
                     <a href="#body-activity">Activités</a>
-                    <a href="#"><span id="register-two">S'inscrire</span></a>
                 </nav>
             </div>
+-->
+
+
+<div id="header">
+    <img src="Ressources/logo/Reservia.svg" alt="logo reservia" /> 
+    <nav id="menu">
+        <a href="#"><span>S'inscrire</span></a>
+        <a href="#body-hosting">Hégergements</a>
+        <a href="#body-activity">Activités</a>
+    </nav>
+</div>
+
+
+
+
+
         </header>
         <div id="body">
             <div id="first-bloc">
