mobile close to end

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 <div id="header">
     <img src="Ressources/logo/Reservia.svg" alt="logo reservia" /> 
     <nav id="menu">
-        <a href="#"><span>S'inscrire</span></a>
-        <a href="#body-hosting">Hégergements</a>
-        <a href="#body-activity">Activités</a>
+        <a href="#">S'inscrire</a>
+        <div class="menu-anchor">
+            <a href="#body-hosting">Hégergements</a>
+            <a href="#body-activity">Activités</a>
+        </div>
     </nav>
 </div>
 
